--- a/static/index.html
+++ b/static/index.html
@@ -74,7 +74,7 @@
             & <a href="http://flask.pocoo.org/">Flask</a>
         </i></p>
         <p>
-            <a href="https://github.com/yancai/blog">By YanCai<img style="vertical-align: bottom; height: 12px; margin-left: 5px" src="/images/GitHub-Mark-32px.png"></a>
+            <a href="https://github.com/yancai">By YanCai<img style="vertical-align: bottom; height: 12px; margin-left: 5px" src="/images/GitHub-Mark-32px.png"></a>
         </p>
 
     </footer>
